examples/test/testpolicy15837.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15837
  namespace: namespace339
spec:
  podSelector:
    matchLabels:
      key3: value39
      key19: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value14
      podSelector:
        matchLabels:
          key21: value11
          key24: value38
